{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1321,
  "lineage": "6fd34e42-1716-6263-aa4c-dac02c0f20cc",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/backend-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-staging",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/api/$2",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 17,
                "labels": {
                  "app": "healthcare-app",
                  "component": "backend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "backend-ingress",
                "namespace": "healthcare-staging",
                "resource_version": "1211598",
                "uid": "49dd6aff-cbf8-4dea-bc92-4fdcaccd586a"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5001
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/api(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.43.177.212"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare",
            "kubernetes_service.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/frontend-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-staging",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {
                  "app": "healthcare-app",
                  "component": "frontend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "frontend-ingress",
                "namespace": "healthcare-staging",
                "resource_version": "1211596",
                "uid": "ace099a0-3623-4c19-a7a5-1c4e1b8b06f3"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3001
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.43.177.212"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring-staging/monitoring-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/auth-secret": "",
                  "nginx.ingress.kubernetes.io/auth-type": "",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "healthcare-app",
                  "component": "monitoring",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "monitoring-ingress",
                "namespace": "monitoring-staging",
                "resource_version": "1177584",
                "uid": "0bcc0a5b-7c0f-4362-ad4f-7d930b532028"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/grafana",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9090
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/prometheus",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "jaeger",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 16686
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/jaeger",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "alertmanager",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9093
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/staging/alertmanager",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.43.177.212"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "healthcare",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "healthcare",
                  "environment": "staging",
                  "managed-by": "terraform",
                  "purpose": "application"
                },
                "name": "healthcare-staging",
                "resource_version": "1177288",
                "uid": "69de015a-34c2-4261-85d6-818365f9f534"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring-staging",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "monitoring",
                  "environment": "staging",
                  "managed-by": "terraform",
                  "purpose": "observability"
                },
                "name": "monitoring-staging",
                "resource_version": "1177123",
                "uid": "4cc80fff-4f6a-43bc-af03-764c07b3b895"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_frontend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/allow-frontend-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-frontend-ingress",
                "namespace": "healthcare-staging",
                "resource_version": "1177294",
                "uid": "79f20f16-64a8-4bc1-94d7-6e5491969a41"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "80",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "healthcare-app",
                      "component": "frontend",
                      "environment": "staging",
                      "managed-by": "terraform"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_frontend_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/allow-frontend-to-backend",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-frontend-to-backend",
                "namespace": "healthcare-staging",
                "resource_version": "1177298",
                "uid": "15e8fe27-983a-438f-b68b-cb9383b05dfa"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "healthcare-staging"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "port": "80",
                        "protocol": "TCP"
                      },
                      {
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "healthcare-app",
                      "component": "frontend",
                      "environment": "staging",
                      "managed-by": "terraform"
                    }
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/allow-internal-communication",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-internal-communication",
                "namespace": "healthcare-staging",
                "resource_version": "1177310",
                "uid": "6660a89c-5715-4fd7-9f9e-744c9ec100e1"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "backend_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/backend-security-policy",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "backend-security-policy",
                "namespace": "healthcare-staging",
                "resource_version": "1177314",
                "uid": "d9ee259d-78e5-441e-b24b-05b5f929bad8"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "healthcare-app",
                              "component": "frontend",
                              "environment": "staging",
                              "managed-by": "terraform"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "port": "5001",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "healthcare-app",
                              "environment": "staging",
                              "managed-by": "terraform"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "port": "5001",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "5001",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "ingress-nginx"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "5001",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "monitoring-staging"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "5001",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "healthcare-app",
                      "component": "mongodb",
                      "environment": "staging",
                      "managed-by": "terraform"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "healthcare-staging",
                "resource_version": "1177293",
                "uid": "10b8e007-4a0b-4478-952e-7a0e3941cb95"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "mongodb_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/mongodb-security-policy",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "mongodb-security-policy",
                "namespace": "healthcare-staging",
                "resource_version": "1177296",
                "uid": "de7cb268-c048-42bc-b87a-e6dfb1cb8ee1"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "healthcare-app",
                              "component": "backend",
                              "environment": "staging",
                              "managed-by": "terraform"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "port": "27017",
                        "protocol": "TCP"
                      }
                    ]
                  },
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "27017",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "healthcare-app",
                      "component": "mongodb",
                      "environment": "staging",
                      "managed-by": "terraform"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "waf_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "healthcare-staging/frontend-waf-policy",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "frontend-waf-policy",
                "namespace": "healthcare-staging",
                "resource_version": "1177311",
                "uid": "3a9bb6b3-e236-4316-ba93-d979e48b5a1e"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": [
                              "10.0.0.0/8",
                              "172.16.0.0/12",
                              "192.168.0.0/16"
                            ]
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "80",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "healthcare-app",
                      "component": "frontend",
                      "environment": "staging",
                      "managed-by": "terraform"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "alertmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/alertmanager",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "alertmanager",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "alertmanager",
                "namespace": "monitoring-staging",
                "resource_version": "1177139",
                "uid": "d5b74ca7-7b7f-4b57-87ac-002496acc3e6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.215.228",
                "cluster_ips": [
                  "10.43.215.228"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9093,
                    "protocol": "TCP",
                    "target_port": "alertmanager"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "alertmanager",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "healthcare-staging/backend",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "5001",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "backend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "backend",
                "namespace": "healthcare-staging",
                "resource_version": "1211583",
                "uid": "abd7bae6-6542-4139-83e2-36ec7d1e435a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.33.162",
                "cluster_ips": [
                  "10.43.33.162"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5001,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "mongodb",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "healthcare-staging/frontend",
            "metadata": [
              {
                "annotations": {
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "80",
                  "prometheus.io/scrape": "true"
                },
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "frontend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "frontend",
                "namespace": "healthcare-staging",
                "resource_version": "1177305",
                "uid": "ced94de0-417f-4691-b879-1567f1b8d7cf"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.21.221",
                "cluster_ips": [
                  "10.43.21.221"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "frontend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/grafana",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "grafana",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "grafana",
                "namespace": "monitoring-staging",
                "resource_version": "1177156",
                "uid": "e8932c03-425c-45d3-8f8c-3961f94b4507"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.52.115",
                "cluster_ips": [
                  "10.43.52.115"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31395,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "grafana"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "grafana",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jaeger",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/jaeger",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "jaeger",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "jaeger",
                "namespace": "monitoring-staging",
                "resource_version": "1177157",
                "uid": "02826f5b-406b-4686-9ade-6fb4f9490ac6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.218.10",
                "cluster_ips": [
                  "10.43.218.10"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "query",
                    "node_port": 0,
                    "port": 16686,
                    "protocol": "TCP",
                    "target_port": "query"
                  },
                  {
                    "name": "collect",
                    "node_port": 0,
                    "port": 14268,
                    "protocol": "TCP",
                    "target_port": "collect"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 14250,
                    "protocol": "TCP",
                    "target_port": "grpc"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "jaeger",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "healthcare-staging/mongodb-staging",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "mongodb",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "mongodb-staging",
                "namespace": "healthcare-staging",
                "resource_version": "1177297",
                "uid": "dec872c2-b94d-424b-86b1-a373a08fef2f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.116.27",
                "cluster_ips": [
                  "10.43.116.27"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 27017,
                    "protocol": "TCP",
                    "target_port": "mongodb"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "mongodb",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.healthcare"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mongodb_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/mongodb-exporter",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "mongodb-exporter",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "mongodb-exporter",
                "namespace": "monitoring-staging",
                "resource_version": "1177164",
                "uid": "047f853c-2609-4e4f-9436-65130a6663d4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.53.120",
                "cluster_ips": [
                  "10.43.53.120"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9216,
                    "protocol": "TCP",
                    "target_port": "metrics"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "mongodb-exporter",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/prometheus",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "prometheus",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "prometheus",
                "namespace": "monitoring-staging",
                "resource_version": "1177136",
                "uid": "d3ebc9fd-9246-4a29-922b-69aece5ea960"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.44.142",
                "cluster_ips": [
                  "10.43.44.142"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "prometheus"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "prometheus",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/sonarqube",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "sonarqube",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "sonarqube",
                "namespace": "monitoring-staging",
                "resource_version": "1211240",
                "uid": "16a4dc19-1441-4e22-a62b-e973b6b9f984"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.1.64",
                "cluster_ips": [
                  "10.43.1.64"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "sonarqube"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sonarqube_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/sonarqube-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "sonarqube",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "sonarqube-external",
                "namespace": "monitoring-staging",
                "resource_version": "1211249",
                "uid": "bfbe44a3-1749-438b-bb7f-819844eb07fa"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.172.109",
                "cluster_ips": [
                  "10.43.172.109"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32158,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "sonarqube"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "alertmanager_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/alertmanager-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "alertmanager"
                },
                "name": "alertmanager-external",
                "namespace": "monitoring-staging",
                "resource_version": "1177194",
                "uid": "654aa752-3a8a-4a16-b77d-72cf1783304a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.114.8",
                "cluster_ips": [
                  "10.43.114.8"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32714,
                    "port": 9093,
                    "protocol": "TCP",
                    "target_port": "9093"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "alertmanager",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "backend_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "healthcare-staging/backend-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "backend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "backend-external",
                "namespace": "healthcare-staging",
                "resource_version": "1204942",
                "uid": "a155fb18-741a-4457-b015-3ce705c2125b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.172.244",
                "cluster_ips": [
                  "10.43.172.244"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32711,
                    "port": 5001,
                    "protocol": "TCP",
                    "target_port": "5001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "mongodb",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.healthcare",
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "elasticsearch_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/elasticsearch-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "elasticsearch"
                },
                "name": "elasticsearch-external",
                "namespace": "monitoring-staging",
                "resource_version": "1177217",
                "uid": "92c63961-a4da-4627-bcc9-64ae74986bef"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.161.6",
                "cluster_ips": [
                  "10.43.161.6"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32716,
                    "port": 9200,
                    "protocol": "TCP",
                    "target_port": "9200"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "elasticsearch",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "healthcare-staging/frontend-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "frontend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "frontend-external",
                "namespace": "healthcare-staging",
                "resource_version": "1177332",
                "uid": "193c16bd-9cac-4f21-be7e-f5bf1c03499e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.203.92",
                "cluster_ips": [
                  "10.43.203.92"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32710,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "frontend",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.healthcare",
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/grafana-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "grafana"
                },
                "name": "grafana-external",
                "namespace": "monitoring-staging",
                "resource_version": "1177207",
                "uid": "6966d86f-8a00-4fe1-8d82-4c836e200a11"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.212.115",
                "cluster_ips": [
                  "10.43.212.115"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32712,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "grafana",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jaeger_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/jaeger-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "jaeger"
                },
                "name": "jaeger-external",
                "namespace": "monitoring-staging",
                "resource_version": "1177202",
                "uid": "38d11564-77d7-4d58-b5b9-03e2853aa800"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.220.200",
                "cluster_ips": [
                  "10.43.220.200"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32715,
                    "port": 16686,
                    "protocol": "TCP",
                    "target_port": "16686"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "jaeger",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_proxy_manager_monitoring[0]",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/prometheus-external",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "prometheus"
                },
                "name": "prometheus-external",
                "namespace": "monitoring-staging",
                "resource_version": "1177186",
                "uid": "09c4f84d-0d00-4bb8-8aba-2c06f4ed8a30"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.59.211",
                "cluster_ips": [
                  "10.43.59.211"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32713,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "prometheus",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    }
  ]
}